adding support to https

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -384,6 +384,7 @@
   "Host not found": "Host not found",
   "Hours": "Hours",
   "HTTP": "HTTP",
+  "HTTPS": "HTTPS",
   "I forgot my password": "I forgot my password",
   "ID": "ID",
   "INPE's DCP data format": "INPE's DCP data format",
