--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -386,6 +386,7 @@
   "Host not found": "Endereço não encontrado",
   "Hours": "Horas",
   "HTTP": "HTTP",
+  "HTTPS": "HTTPS",
   "I forgot my password": "Eu esqueci minha senha",
   "ID": "ID",
   "INPE's DCP data format": "PCD - formato INPE",
