Improving delete messages

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -971,5 +971,18 @@
   "updated": "updated",
   "w": "w",
   "Invalid address": "Invalid address",
-  "The service can not access the log database!": "The service can not access the log database!"
+  "The service can not access the log database!": "The service can not access the log database!",
+  "Can not delete the data series if the service is stopped": "Can not delete the data series if the service is stopped",
+  "Can not delete the view if the service is not running": {
+    " ": "Can not delete the view if the service is not running. "
+  },
+  "Can not delete the analysis if the service is not running": {
+    " ": "Can not delete the analysis if the service is not running. "
+  },
+  "Can not delete the data series if the service is not running": {
+    " ": "Can not delete the data series if the service is not running. "
+  },
+  "Can not delete the alert if the service is not running": {
+    " ": "Can not delete the alert if the service is not running. "
+  }
 }
