--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -984,5 +984,17 @@
   },
   "Can not delete the alert if the service is not running": {
     " ": "Can not delete the alert if the service is not running. "
+  },
+  "If service is not running you can not save the data series": {
+    " Start the service before create or update a data series!": "If service is not running you can not save the data series. Start the service before create or update a data series!"
+  },
+  "If service is not running you can not save the analysis": {
+    " Start the service before create or update an analysis!": "If service is not running you can not save the analysis. Start the service before create or update an analysis!"
+  },
+  "If service is not running you can not save the view": {
+    " Start the service before create or update a view!": "If service is not running you can not save the view. Start the service before create or update a view!"
+  },
+  "If service is not running you can not save the alert": {
+    " Start the service before create or update an alert!": "If service is not running you can not save the alert. Start the service before create or update an alert!"
   }
 }
