--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -985,5 +985,17 @@
   },
   "Can not delete the alert if the service is not running": {
     " ": "Não pode deletar o alerta se o serviço não estiver rodando. "
+  },
+  "If service is not running you can not save the data series": {
+    " Start the service before create or update a data series!": "Se o serviço não estiver rodando não pode salvar a série de dados. Rode o serviço antes de criar ou alterar uma série de dados!"
+  },
+  "If service is not running you can not save the analysis": {
+    " Start the service before create or update an analysis!": "Se o serviço não estiver rodando não pode salvar a análise. Rode o serviço antes de criar ou alterar uma análise!"
+  },
+  "If service is not running you can not save the view": {
+    " Start the service before create or update a view!": "Se o serviço não estiver rodando não pode salvar a visualização. Rode o serviço antes de criar ou alterar uma visualização!"
+  },
+  "If service is not running you can not save the alert": {
+    " Start the service before create or update an alert!": "Se o serviço não estiver rodando não pode salvar o alerta. Rode o serviço antes de criar ou alterar um alerta!"
   }
 }
