--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -997,5 +997,21 @@
   },
   "If service is not running you can not save the alert": {
     " Start the service before create or update an alert!": "Se o serviço não estiver rodando não pode salvar o alerta. Rode o serviço antes de criar ou alterar um alerta!"
-  }
+  },
+	"Permission": "Permissão",
+	"You can not edit this data server": {
+		" He belongs to a private project!": "Você não pode editar essa servidor de dados. Ele pertence a um projeto privado!"
+	},
+	"You can not edit this data series": {
+		" He belongs to a private project!": "Você não pode editar essa série de dados. Ela pertence a um projeto privado!"
+	},
+	"You can not edit this analysis": {
+		" He belongs to a private project!": "Você não pode editar essa análise. Ela pertence a um projeto privado!"
+	},
+	"You can not edit this view": {
+		" He belongs to a private project!": "Você não pode editar essa visualização. Ela pertence a um projeto privado!"
+	},
+	"You can not edit this alert": {
+		" He belongs to a private project!": "Você não pode editar esse alerta. Ele pertence a um projeto privado!"
+	}
 }
