Checking user permission to remove an object

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -1011,5 +1011,6 @@
   },
   "You can not edit this alert": {
     " He belongs to a private project!": "You can not edit this alert. He belongs to a private project!"
-  }
+  },
+  "User is not allowed": "User is not allowed"
 }
