--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -1013,5 +1013,6 @@
 	},
 	"You can not edit this alert": {
 		" He belongs to a private project!": "Você não pode editar esse alerta. Ele pertence a um projeto privado!"
-	}
+	},
+	"User is not allowed": "Usuário não tem permissão"
 }
