--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -807,9 +807,6 @@
   "Static Data Registration": "Registro de Dado Estático",
   "Static GDAL grid": "Grade estática GDAL",
   "Static GeoTIFF grid": "Grade estático GeoTIFF",
-  "Static geometric object - OGR (data file)": "Objeto geométrico estático - OGR (arquivo)",
-  "Static geometric object - PostGIS": "Objeto geométrico estático - PostGIS",
-  "Static grid - GDAL": "Matriz estática - GDAL",
   "Static Themes": "Temas Estáticos",
   "Statistics": "Estatísticas",
   "Status": "Situação Atual",
@@ -998,22 +995,25 @@
   "If service is not running you can not save the alert": {
     " Start the service before create or update an alert!": "Se o serviço não estiver rodando não pode salvar o alerta. Rode o serviço antes de criar ou alterar um alerta!"
   },
-	"Permission": "Permissão",
-	"You can not edit this data server": {
-		" He belongs to a protected project!": "Você não pode editar essa servidor de dados. Ele pertence a um projeto protegido!"
-	},
-	"You can not edit this data series": {
-		" He belongs to a protected project!": "Você não pode editar essa série de dados. Ela pertence a um projeto protegido!"
-	},
-	"You can not edit this analysis": {
-		" He belongs to a protected project!": "Você não pode editar essa análise. Ela pertence a um projeto protegido!"
-	},
-	"You can not edit this view": {
-		" He belongs to a protected project!": "Você não pode editar essa visualização. Ela pertence a um projeto protegido!"
-	},
-	"You can not edit this alert": {
-		" He belongs to a protected project!": "Você não pode editar esse alerta. Ele pertence a um projeto protegido!"
-	},
-	"User is not allowed": "Usuário não tem permissão",
-  "Protected": "Protegido"
+  "Permission": "Permissão",
+  "You can not edit this data server": {
+    " He belongs to a protected project!": "Você não pode editar essa servidor de dados. Ele pertence a um projeto protegido!"
+  },
+  "You can not edit this data series": {
+    " He belongs to a protected project!": "Você não pode editar essa série de dados. Ela pertence a um projeto protegido!"
+  },
+  "You can not edit this analysis": {
+    " He belongs to a protected project!": "Você não pode editar essa análise. Ela pertence a um projeto protegido!"
+  },
+  "You can not edit this view": {
+    " He belongs to a protected project!": "Você não pode editar essa visualização. Ela pertence a um projeto protegido!"
+  },
+  "You can not edit this alert": {
+    " He belongs to a protected project!": "Você não pode editar esse alerta. Ele pertence a um projeto protegido!"
+  },
+  "User is not allowed": "Usuário não tem permissão",
+  "Protected": "Protegido",
+  "Features table (PostgreSQL/PostGIS)": "Tabelas com Feições (PostgreSQL/PostGIS)",
+  "Grid Files (GeoTIFF)": "Arquivos Matriciais (GeoTIFF)",
+  "Vector Files (ESRI Shapefile)": "Arquivos Vetoriais (ESRI Shapefile)"
 }
