Filter analysis by dcp type

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -1013,5 +1013,6 @@
   "Protected": "Protected",
   "Features table (PostgreSQL/PostGIS)": "Features table (PostgreSQL/PostGIS)",
   "Grid Files (GeoTIFF)": "Grid Files (GeoTIFF)",
-  "Vector Files (ESRI Shapefile)": "Vector Files (ESRI Shapefile)"
+  "Vector Files (ESRI Shapefile)": "Vector Files (ESRI Shapefile)",
+  "Dcp": "Dcp"
 }
