--- a/webapp/locales/es_ES.json
+++ b/webapp/locales/es_ES.json
@@ -1022,5 +1022,8 @@
   "Features table (PostgreSQL/PostGIS)": "",
   "Grid Files (GeoTIFF)": "",
   "Vector Files (ESRI Shapefile)": "",
-  "Dcp": ""
+  "Dcp": "",
+  " Data Series": " Data Series",
+  "Dcp Data Series": "Séries de Dados PCD",
+  "Object Monitored Data Series": "Objeto Monitorado"
 }
