--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -1023,5 +1023,6 @@
   "Dcp": "Dcp",
   " Data Series": " Data Series",
   "Dcp Data Series": "Dcp Data Series",
-  "Object Monitored Data Series": "Object Monitored Data Series"
+  "Object Monitored Data Series": "Object Monitored Data Series",
+  "Interpolation": "Interpolation"
 }
