improving data provider and user password fields

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -423,6 +423,7 @@
   "Influence radius is required": "Influence radius is required",
   "Information": "Information",
   "Input Data": "Input Data",
+  "Insert a value if you want to update the password": "Insert a value if you want to update the password",
   "Insert the Color": "Insert the Color",
   "Instance": "Instance",
   "Institute": "Institute",
