--- a/webapp/locales/es_ES.json
+++ b/webapp/locales/es_ES.json
@@ -1035,5 +1035,6 @@
   "Dcp": "",
   " Data Series": " Data Series",
   "Dcp Data Series": "Séries de Dados PCD",
-  "Object Monitored Data Series": "Objeto Monitorado"
+  "Object Monitored Data Series": "Objeto Monitorado",
+  "Insert a value if you want to update the password": ""
 }
