--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -425,6 +425,7 @@
   "Influence radius is required": "Raio de Influência é requerido",
   "Information": "Informação",
   "Input Data": "Dado de Entrada",
+  "Insert a value if you want to update the password": "Insira um valor caso queira atualizar a senha",
   "Insert the Color": "Insira a Cor",
   "Instance": "Instância",
   "Institute": "Instituto",
