--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -972,13 +972,12 @@
   "w": "w",
   "Invalid address": "Endereço inválido",
   "The service can not access the log database!": "O serviço não pode acessar o banco de logs!",
-	"Error": " read ECONNRESET",
   "The service can not access the map server!": "O serviço não pode acessar o servidor de mapas!",
   "Host service error": "Erro no executável do serviço: ",
-	"Log database error": "Erro no banco de dados de log: ",
-	"Port error": "Erro na porta: ",
-	"Email server error": "Erro no servidor de email: ",
-	"Map server error": "Erro no servidor de mapas: ",
+  "Log database error": "Erro no banco de dados de log: ",
+  "Port error": "Erro na porta: ",
+  "Email server error": "Erro no servidor de email: ",
+  "Map server error": "Erro no servidor de mapas: ",
   "Can not delete the data series if the service is not running": {
     " ": "Não pode deletar a série de dados se o serviço não estiver rodando. "
   },
@@ -1028,5 +1027,20 @@
   " Data Series": " Data Series",
   "Dcp Data Series": "Séries de Dados PCD",
   "Object Monitored Data Series": "Objeto Monitorado",
-	"Interpolation": "Interpolação"
+  "Interpolation": "Interpolação",
+  "Interpolator Registration": "Registro de Interpolador",
+  "Strategy": "Estratégia",
+  "Data series to interpolate": "Data series para interpolar",
+  "Interpolator strategy": "Estratégia de interpolação",
+  "Nearest neighbor": "Vizinho mais próximo",
+  "Average neighbor": "Vizinho médio",
+  "Weight average neighbor": "Vizinho médio ponderado",
+  "Interpolation attribute": "Atributo da interpolação",
+  "Number of neighbors": "Número de vizinhos",
+  "X max": "X max",
+  "Y min": "Y min",
+  "Y max": "Y max",
+  "X resolution": "Resolução X",
+  "Y resolution": "Resolução Y",
+  "Power factor": "Power factor"
 }
