Locale, small fix

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -1042,5 +1042,6 @@
   "Y max": "Y max",
   "X resolution": "X resolution",
   "Y resolution": "Y resolution",
-  "Power factor": "Power factor"
+  "Power factor": "Power factor",
+  "Interpolate": "Interpolate"
 }
