--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -104,6 +104,7 @@
   "Area of interest for notification": "Area of interest for notification",
   "Area of interest is required": "Area of interest is required",
   "Array items are not unique": "Array items are not unique",
+	"Attach Views": "Attach Views",
   "Attribute": "Attribute",
   "Attribute    ": "Attribute    ",
   "Attribute Identifier": "Attribute Identifier",
