--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -104,6 +104,7 @@
   "Area of interest for notification": "Área de interesse para notificação",
   "Area of interest is required": "Área de interesse é requerida",
   "Array items are not unique": "Os itens do array não são únicos",
+	"Attach Views": "Anexar Visualizações",
   "Attribute": "Atributo",
   "Attribute    ": "Atributo    ",
   "Attribute Identifier": "Atributo Identificador",
