creating the select

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -712,6 +712,7 @@
   "Search": "Search",
   "Seconds": "Seconds",
   "Select": "Select",
+	"Select a Project": "Select a Project",
   "Select Area of Interest": "Select Area of Interest",
   "Select Attibutes": "Select Attibutes",
   "Select Attributes": "Select Attributes",
