--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -714,6 +714,7 @@
   "Search": "Pesquisa",
   "Seconds": "Segundos",
   "Select": "Selecionar",
+	"Select a Project": "Selecione um Projeto",
   "Select Area of Interest": "Selecione Área de Interesse",
   "Select Attibutes": "Selecione atributos",
   "Select Attributes": "Selecione atributos",
