--- a/webapp/locales/es_ES.json
+++ b/webapp/locales/es_ES.json
@@ -1060,5 +1060,6 @@
   "Interpolator": "",
   "If service is not running you can not save the interpolator": {
     " Start the service before create or update an interpolator!": ""
-  }
+  },
+  "Select the Interpolator Service to be Used": ""
 }
