--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -1050,5 +1050,6 @@
   "Interpolator": "Interpolador",
   "If service is not running you can not save the interpolator": {
     " Start the service before create or update an interpolator!": "Se o serviço não estiver rodando não pode salvar o interpolador. Rode o serviço antes de criar ou alterar um interpolador!"
-  }
+  },
+  "Select the Interpolator Service to be Used": "Selecione o Serviço de Interpolação a ser usado"
 }
