--- a/webapp/locales/es_ES.json
+++ b/webapp/locales/es_ES.json
@@ -1039,5 +1039,14 @@
   "Object Monitored Data Series": "Objeto Monitorado",
   "Insert a value if you want to update the password": "",
 	"Transfer Shapefile": "",
-	"Attach Views": ""
+	"Attach Views": "",
+  "Projection SRID is required": "",
+	"X max": "",
+  "X max is required": "",
+  "X min is required": "",
+	"Y min": "",
+  "Y max": "",
+  "Y max is required": "",
+  "Y min is required": "",
+  "No views attached.": ""
 }
