--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -569,6 +569,7 @@
   "No projects found.": "Nenhum projeto encontrado.",
   "No shapefile found!": "Nenhum shapefile encontrado",
   "No view service found": "Nenhum serviço de visualização encontrado",
+  "No views attached.": "Nenhuma visualização anexada.",
   "Nome": "Nome",
   "None": "Nenhum",
   "Note": " Sem configuração de armazenamento, estes dados serão acessados quando necessário.",
@@ -655,6 +656,7 @@
   "Projection": "Projeção",
   "Projection (SRID)": "Projeção (SRID)",
   "Projection SRID": "Projeção SRID",
+  "Projection SRID is required": "O preenchimento da Projeção SRID é obrigatório",
   "Projects": "Projetos",
   "Properties name line": "Linha dos nomes",
   "Properties name lines": "Linhas dos nomes",
@@ -936,9 +938,16 @@
   "X is invalid number": "X é um número inválido",
   "X is required": "X é requerido",
   "X min": "X min",
+  "X max": "X max",
+  "X max is required": "O preenchimento do X max é obrigatório",
+  "X min is required": "O preenchimento do X min é obrigatório",
   "XML": "XML",
   "XML Style": "Estilo do XML",
   "Y": "Y",
+  "Y min": "Y min",
+  "Y max": "Y max",
+  "Y max is required": "O preenchimento do Y max é obrigatório",
+  "Y min is required": "O preenchimento do Y min é obrigatório",
   "Y is invalid number": "Y é um número inválido",
   "Y is required": "Y é requerido",
   "Yes": "Sim",
