--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -440,7 +440,7 @@
   "Invalid configuration for the TerraMA² data directory": "Invalid configuration for the TerraMA² data directory",
   "Invalid folder": "Invalid folder",
   "Invalid format": "Invalid format",
-  "Invalid intersection. Static data series must have at least a attribute.": "Invalid intersection. Static data series must have at least a attribute.",
+  "Invalid intersection. Each data series must have at least one attribute selected.": "Invalid intersection. Each data series must have at least one attribute selected.",
   "Invalid mask": "Invalid mask",
   "Invalid path": "Invalid path",
   "Invalid port. Important! Make sure the server's REST API is enabled": "Invalid port. Important! Make sure the server's REST API is enabled",
