--- a/webapp/locales/es_ES.json
+++ b/webapp/locales/es_ES.json
@@ -1039,7 +1039,7 @@
   "Object Monitored Data Series": "Objeto Monitorado",
   "Insert a value if you want to update the password": "",
 	"Transfer Shapefile": "",
-  "Select a Project": ""
+  "Select a Project": "",
 	"Wild fire event (ESRI Shapefile)": "",
 	"Timestamp property": "",
 	"Geometry property": "",
