translating error messages

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -311,9 +311,11 @@
   "Export": "Export",
   "Failed to connect, verify the connection parameters": "Failed to connect, verify the connection parameters",
   "Failed to connect, verify the connection parameters. Important! Make sure the server's REST API is enabled": "Failed to connect, verify the connection parameters. Important! Make sure the server's REST API is enabled",
+  "Failed to create destination folder!": "Failed to create destination folder!",  
   "Fields": "Fields",
   "FILE": "FILE",
   "File": "File",
+  "File already exists!": "File already exists!",
   "File is too large!": "File is too large!",
   "File name:": "File name:",
   "File name": "File name",
@@ -438,10 +440,12 @@
   "Intersection": "Intersection",
   "Invalid alias": "Invalid alias",
   "Invalid configuration for the TerraMA² data directory": "Invalid configuration for the TerraMA² data directory",
+  "Invalid data provider path!": "Invalid data provider path!",
   "Invalid folder": "Invalid folder",
   "Invalid format": "Invalid format",
   "Invalid intersection. Each data series must have at least one attribute selected.": "Invalid intersection. Each data series must have at least one attribute selected.",
   "Invalid mask": "Invalid mask",
+  "Invalid mask!": "Invalid mask!",
   "Invalid path": "Invalid path",
   "Invalid port. Important! Make sure the server's REST API is enabled": "Invalid port. Important! Make sure the server's REST API is enabled",
   "Invalid range of ports": {
