--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -312,9 +312,11 @@
   "Export": "Exportar",
   "Failed to connect, verify the connection parameters": "Falha ao conectar, verifique os parâmetros de conexão",
   "Failed to connect, verify the connection parameters. Important! Make sure the server's REST API is enabled": "Falha ao conectar, verifique os parâmetros de conexão. Importante! Certifique-se de que a API REST do servidor está habilitada",
+  "Failed to create destination folder!": "Falha ao criar a pasta de destino!",
   "Fields": "Campos",
   "FILE": "ARQUIVO",
   "File": "Arquivo",
+  "File already exists!": "O arquivo já existe!",
   "File is too large!": "Arquivo muito grande!",
   "File name:": "Nome do arquivo:",
   "File name": "Nome do arquivo",
@@ -440,10 +442,12 @@
   "Intersection": "Interseção",
   "Invalid alias": "Pseudônimo inválido",
   "Invalid configuration for the TerraMA² data directory": "A atual configuração do diretório de dados do TerraMA² é inválida",
+  "Invalid data provider path!": "O caminho do Servidor de Dados é inválido!",
   "Invalid folder": "Pasta inválida",
   "Invalid format": "Formato inválido",
   "Invalid intersection. Each data series must have at least one attribute selected.": "Interseção inválida. Cada série de dados deve possuir pelo menos um atributo selecionado.",
   "Invalid mask": "Máscara inválida",
+  "Invalid mask!": "Máscara inválida!",
   "Invalid path": "Caminho inválido",
   "Invalid port. Important! Make sure the server's REST API is enabled": "Porta inválida. Importante! Certifique-se de que a API REST do servidor está habilitada",
   "Invalid range of ports": {
