--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -320,6 +320,7 @@
   "File is too large!": "Arquivo muito grande!",
   "File name:": "Nome do arquivo:",
   "File name": "Nome do arquivo",
+  "File Name": "Nome do Arquivo",
   "File static data": "Arquivo de Dado Estático",
   "Files can be overwritten": "Arquivos podem ser sobrescritos",
   "Filter": "Filtro",
@@ -363,6 +364,7 @@
   "Generate an image": "Gerar uma imagem",
   "Generic Format for CSV files": "Formato genérico para arquivos CSV",
   "GeoTIFF grid": "Grade GeoTIFF",
+  "GeoTIFF imported with success!": "GeoTIFF importado com sucesso!",
   "Geometric Object": "Objeto Geométrico",
   "GrADS": "Formato GrADS",
   "Grid": "Grade",
@@ -443,6 +445,7 @@
   "Invalid alias": "Pseudônimo inválido",
   "Invalid configuration for the TerraMA² data directory": "A atual configuração do diretório de dados do TerraMA² é inválida",
   "Invalid data provider path!": "O caminho do Servidor de Dados é inválido!",
+  "Invalid file name!": "Nome de arquivo inválido!",
   "Invalid folder": "Pasta inválida",
   "Invalid format": "Formato inválido",
   "Invalid intersection. Each data series must have at least one attribute selected.": "Interseção inválida. Cada série de dados deve possuir pelo menos um atributo selecionado.",
@@ -840,6 +843,7 @@
   "The connection was refused by the server, verify the connection parameters. Important! Make sure the server's REST API is enabled": "A conexão foi recusada pelo servidor, verifique os parâmetros de conexão. Importante! Certifique-se de que a API REST do servidor está habilitada",
   "The first line is a header?": "A primeira linha é um cabeçalho?",
   "The process was started successfully": "O processo foi iniciado com sucesso",
+  "The size limit for the file is 300 MB.": "O tamanho limite do arquivo é de 300 MB.",
   "The values of the levels must be numeric and be in a growing order%2C and the names of the levels must be filled": "Os valores dos níveis devem ser numéricos e estar em uma ordem crescente%2C e os nomes dos níveis devem ser preenchidos",
   "The values of the levels must be numeric and be in a growing order, and the names of the levels must be filled": "Os valores dos níveis devem ser numéricos e estar em uma ordem crescente, e os nomes dos níveis devem ser preenchidos",
   "Theme": "Tema",
@@ -868,6 +872,7 @@
   "To upload your shapefile you have to create a .zip compressed file containing all the shapefile files (.shp, .dbf, .shx, etc). The size limit is 300 MB per file, therefore, neither of the shapefile files can be larger than 300 MB.": "Para realizar o upload do seu shapefile é necessário compactar os arquivos (.shp, .dbf, .shx, etc) em um arquivo .zip. O tamanho limite é de 300 MB por arquivo, portanto nenhum dos arquivos do shapefile podem ser maiores que 300 MB.",
   "Tools": "Ferramentas",
   "Transfer Shapefile": "Transferir Shapefile",
+  "Transfer GeoTIFF": "Transferir GeoTIFF",
   "Tuesday": "Terça-feira",
   "Type": "Tipo",
   "Type a projetion": {
