--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -319,6 +319,7 @@
   "File is too large!": "File is too large!",
   "File name:": "File name:",
   "File name": "File name",
+  "File Name": "File Name",
   "File static data": "File static data",
   "Files can be overwritten": "Files can be overwritten",
   "Filter": "Filter",
@@ -362,6 +363,7 @@
   "Generate an image": "Generate an image",
   "Generic Format for CSV files": "Generic Format for CSV files",
   "GeoTIFF grid": "GeoTIFF grid",
+  "GeoTIFF imported with success!": "GeoTIFF imported with success!",
   "Geometric Object": "Geometric Object",
   "GrADS": "GrADS",
   "Grid": "Grid",
@@ -441,6 +443,7 @@
   "Invalid alias": "Invalid alias",
   "Invalid configuration for the TerraMA² data directory": "Invalid configuration for the TerraMA² data directory",
   "Invalid data provider path!": "Invalid data provider path!",
+  "Invalid file name!": "Invalid file name!",
   "Invalid folder": "Invalid folder",
   "Invalid format": "Invalid format",
   "Invalid intersection. Each data series must have at least one attribute selected.": "Invalid intersection. Each data series must have at least one attribute selected.",
@@ -838,6 +841,7 @@
   "The connection was refused by the server, verify the connection parameters. Important! Make sure the server's REST API is enabled": "The connection was refused by the server, verify the connection parameters. Important! Make sure the server's REST API is enabled",
   "The first line is a header?": "The first line is a header?",
   "The process was started successfully": "The process was started successfully",
+  "The size limit for the file is 300 MB.": "The size limit for the file is 300 MB.",
   "The values of the levels must be numeric and be in a growing order%2C and the names of the levels must be filled": "The values of the levels must be numeric and be in a growing order%2C and the names of the levels must be filled",
   "The values of the levels must be numeric and be in a growing order, and the names of the levels must be filled": "The values of the levels must be numeric and be in a growing order, and the names of the levels must be filled",
   "Theme": "Theme",
@@ -865,6 +869,7 @@
   "To import this file you need to have at least one view service": "To import this file you need to have at least one view service",
   "To upload your shapefile you have to create a .zip compressed file containing all the shapefile files (.shp, .dbf, .shx, etc). The size limit is 300 MB per file, therefore, neither of the shapefile files can be larger than 300 MB.": "To upload your shapefile you have to create a .zip compressed file containing all the shapefile files (.shp, .dbf, .shx, etc). The size limit is 300 MB per file, therefore, neither of the shapefile files can be larger than 300 MB.",
   "Tools": "Tools",
+  "Transfer GeoTIFF": "Transfer GeoTIFF",
   "Transfer Shapefile": "Transfer Shapefile",
   "Tuesday": "Tuesday",
   "Type": "Type",
