[Final] duplicating a data series from another project

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -712,7 +712,7 @@
   "Search": "Search",
   "Seconds": "Seconds",
   "Select": "Select",
-	"Select a Project": "Select a Project",
+  "Select a Project": "Select a Project",
   "Select Area of Interest": "Select Area of Interest",
   "Select Attibutes": "Select Attibutes",
   "Select Attributes": "Select Attributes",
@@ -1027,5 +1027,9 @@
   "Dcp": "Dcp",
   " Data Series": " Data Series",
   "Dcp Data Series": "Dcp Data Series",
-  "Object Monitored Data Series": "Object Monitored Data Series"
+  "Object Monitored Data Series": "Object Monitored Data Series",
+  "Import data series": "Import data series",
+  "Choose data series": "Choose data series",
+  "Data Series import": "Data Series import",
+  "imported": "imported"
 }
