--- a/webapp/locales/es_ES.json
+++ b/webapp/locales/es_ES.json
@@ -1058,5 +1058,6 @@
   "Import data series": "Import data series",
   "Choose data series": "Choose data series",
   "Data Series import": "Data Series import",
-  "imported": "imported"
+  "imported": "imported",
+  "Data series": "Série de dados"
 }
