--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -241,6 +241,7 @@
   "Data provider port is required for": "Porta do servidor de dados é requerido para",
   "Data provider protocol is required": "Protocolo do servidor de dados é requerido",
   "Data provider scheme is required": "Esquema do servidor de dados é requerido",
+  "Data series": "Série de dados",
   "Data series is required": "O preenchimento da série de dados é obrigatório",
   "Data series name is required": "O preenchimento do nome da série de dados é obrigatório",
   "Data server Timeout (sec)": "Tempo Limite do Servidor de Dados (seg)",
