--- a/webapp/locales/es_ES.json
+++ b/webapp/locales/es_ES.json
@@ -1060,6 +1060,7 @@
 	"X max": "",
   "X max is required": "",
   "X min is required": "",
+  "Y min is required": "",
 	"Y min": "",
   "Y max": "",
   "Y max is required": "",
