--- a/webapp/locales/es_ES.json
+++ b/webapp/locales/es_ES.json
@@ -1060,8 +1060,10 @@
 	"X max": "",
   "X max is required": "",
   "X min is required": "",
+  "Y min is required": "",
 	"Y min": "",
   "Y max": "",
   "Y max is required": "",
-  "No views attached.": ""
+  "No views attached.": "",
+	"Import data": ""
 }
